CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');

:root {
	--light: #fff;
	--dark: #181818;
	--accent: #2DBFBD;
}

/* For Smooth Scrool */
html {
	/* scroll-behavior: smooth */
}

.vertical-center {
	position: absolute;
  	left: 50%;
  	top: 50%;
  	transform: translate(-50%, -50%);
	width: 78%;
}

.horizontal-center{
	margin: 0 auto;
}

.padding-left{
	padding: 0 1rem 0 3rem;
	margin: 0;
}

.about-padding{
	padding: 15vh 10vw 0 2vw;
	margin: 0;
}

.equal-flex{
	flex-grow: 1;
	flex-basis: 0;
}

body {
	margin: 0px;
	padding: 0px;
	background-color: var(--dark);
	font-family: 'Open Sans', sans-serif;
	font-weight: 300;
	font-size: 1.5rem;
	color: var(--dark);
}

/* Home Banner Image */

.homebannerimage {
	position: absolute;
	/* border: red 2px solid; */
	height: 140%;
	right: -6%;
	top: -15%;
}

.banner-image-container{
	height: 100vh;
	overflow: hidden;
}

.banner-image{
	object-fit: cover;
	object-position: 50% 50%;
	height: 100%;
	width: 100%;
}

hr.new2 {
	border-top: 2px dashed var(--dark);
}


.strip1 {
	height: 100vh;
	padding: 20vh 12vw;
	/*position: sticky;
	top: 0;*/
	color: var(--light);
	z-index: 1;
	background-color: var(--dark);
}

.strip2 {
	min-height: 100vh;
	padding: 10vh 0;
	position: relative;
	/*position: sticky;
	top:0;
	overflow-y: auto;*/
	/* padding-left: 12vw; */
	padding-right: 12vw;
	background-color: var(--light);
	color: var(--dark);
	/* box-shadow: 0px -25px 20px rgba(1, 1, 1, 0.25); */
	z-index: 10;
}

.strip3 {
	/*height: 250vh;*/
	/*position: sticky;
	top: 0;*/
	position: relative;
	min-height: 100vh;
	padding: 20vh 12vw;
	background-color: var(--dark);
	color: var(--light);
	/* box-shadow: 0px -40px 20px rgba(1, 1, 1, 0.041); */
	z-index: 20;
}

.strip4 {
	/*padding: 10vh 0vh;
	height: 100vh;*/
	min-height: 100vh;
	/* padding: 0vh 12vw 0 12vw; */
	/*position: sticky;
	top: 0;*/
	position: relative;
	/* padding-left: 12vw ;
	padding-right: 12vw ; */
	background-color: var(--light);
	color: var(--dark);
	/* box-shadow: 0px -25px 20px rgba(1, 1, 1, 0.25); */
	z-index: 30;
}

.custfooter {
	background-color: var(--light);
	/* position: relative;
	z-index: 50; */

}



/*Heading text styling*/
h1 {
	font-family: 'Montserrat', sans-serif;
	font-weight: 800;
	margin: 0;
	line-height: 1;
	font-size: 6rem;
}

h2 {
	font-family: 'Montserrat', sans-serif;
	font-weight: 800;
	margin: 0;
	line-height: 1;
	font-size: 5rem;
}

/*For the form*/
form {
	padding: 10vh 0;
}

.inputtext {
	border: none;
	border-bottom: 3px solid var(--dark);
}


/*Portfolio Heading styles*/
.portfolioheads {
	font-family: 'Montserrat', sans-serif;
	font-weight: 800;
	margin: 0;
	line-height: 1;
	font-size: 13vh;
	text-align: center;


}

.contactext {
	margin-left: 90%;
}

#banner-lottie-1 {
	width: 90%;
	position: absolute;
	left: 0% !important;
	top: -2% !important;
	transform: translate(-50%, -50%) !;
	z-index: 200;
}

#banner-lottie-2 {
	width: 120%;
	position: absolute;
	left: -10% !important;
	top: -20% !important;
	transform: translate(-50%, -50%);
}


/*About text styling*/
.abouttext {
	font-family: 'Open Sans', sans-serif;
}

/*Gallery */
.btn-outline-light {
	border-radius: 0px;
	border-width: 0px;
	background-color: var(--dark) !important;
	color: var(--light) !important;
	font-family: 'Montserrat', sans-serif;
	font-weight: 900;
	font-size: 1.5rem;
	transition: all 0.5s ease;
}

.btn-outline-light:hover {
	border-radius: 0px;
	/* border-width: 0px 0px 3px 0px; */
	color: var(--accent) !important;
	border-color: var(--accent) !important;
}

.active {
	border-radius: 0px;
	/* border-width: 0px 0px 3px 0px; */
	border-color: var(--accent) !important;
	background-color: var(--dark) !important;
	color: var(--accent) !important;
	font-family: 'Montserrat', sans-serif;
	font-weight: 900;
	font-size: 1.5rem;

}

/* Strike through starts here */
/* .btn-outline-light {
	position: relative;
	display: block;
	cursor: pointer;
  }
  
  .btn-outline-light:before, .btn-outline-light:after {
	content: '';
	position: absolute;
	width: 0%;
	height: 5px; change this to change strikethrough 
	top: 45%;
	margin-top: -0.5px;
	background: var(--accent);
  }
  
  .btn-outline-light:before {
	left: -2.5px;
  }
  .btn-outline-light:after {
	right: 2.5px;
	background: var(--accent);
	transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
  }
  
  .btn-outline-light:hover:before, .active:before {
	background: var(--accent);
	width: 100%;
	transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
  }
  
  .btn-outline-light:hover:after, .active:after {
	background: transparent;
	width: 100%;
	transition: 0s;
  } */
/* Strike through ends here */


.nopad {
	padding: 0;
	margin: 0;
}

.yespad {
	margin-top: 25px;
}


.nopad-right {
	padding-right: 0;
	margin-right: 0;
}

.rightalign {
	position: absolute;
	right: 0;
}


/*Footer text styling*/
.footertext {
	font-family: 'Avenir Light', 'Montserrat';
	margin-top: 0.5rem;
}

/*Highlited text styling*/
.highlight {
	color: var(--accent);
	font-style: italic;
	font-weight: 700;
}

.highlight-heads {
	color: var(--accent);
	font-style: italic;
	font-weight: 800;
}

/*Greeting text styling*/
.element {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

/*Subpage Title styling*/
.custpage {
	font-size: 10vw;
	margin: 1.5vw 0vh 0vh 0.4vh;

}

/*Name of the container*/
.newpost {
	margin: 0;
	padding-left: 0.5vw;
	padding-top: 3vw;
}

/* New Post ka text*/
.nptext {
	font-size: 3vw;
	font-family: 'Open Sans', sans-serif;
}

/*Form*/
.postform {
	width: 100%;
	border: solid var(--dark);
	color: var(--dark);
	background-color: transparent;
	border-width: 0;
	border-radius: 0 !important;
	border-bottom-width: 2px;
	padding: 5px;
	margin-right: 25px;
	margin-top: 25px;

}

.postform:focus {
	outline: none;
}



.custominput {
	width: 100%;
	padding: 12px 20px;
	box-sizing: border-box;
}

.custbutton {
	padding: 10px 30px;
	position: relative;
	/*left:50%;
	transform: translateX(-50%);*/
	font-family: 'Montserrat', sans-serif;
	font-weight: 900;
	font-size: 15px;
	text-transform: uppercase;
	background-color: var(--light);
	/* background: url(before.jpg);
	background-size: cover;
	background-position: -10px -10px; */
	color: var(--dark);
	/* border-radius: 30px; */
	border-width: 3px;
	border-color: var(--dark);
	transition: all 0.5s ease;
}

.custbutton:hover {
	/* background: url(after.jpg);
	background-size: cover; */
	background-color: var(--dark);
	color: var(--accent);

}

.subbutton {
	padding: 10px 30px;
	margin-top: 25px;
	font-family: 'Montserrat', sans-serif;
	font-weight: 800;
	font-size: 15px;
	text-transform: uppercase;
	background-color: var(--light);
	/* background: url(before.jpg);
	background-size: cover;
	background-position: -10px -10px; */
	color: var(--dark);
	/* border-radius: 30px; */
	border-width: 3px;
	border-color: var(--dark);
	transition: all 0.5s ease;
}

.subbutton:hover {
	/* background: url(after.jpg);
	background-size: cover; */
	background-color: var(--dark);
	color: var(--accent);

}



/* Footer Social Media links 
	Instagram*/
.insta {
	text-decoration: none;
	font-weight: 900;
	color: var(--dark);
	transition: all 0.5s ease;
}

.insta:hover {
	text-decoration: none;
	color: #DF346D;
}

/* Youtube */
.yout {
	text-decoration: none;
	font-weight: 900;
	color: var(--dark);
	transition: all 0.5s ease;
}

.yout:hover {
	text-decoration: none;
	color: #FF0000;
}

/* Behance */
.beha {
	text-decoration: none;
	font-weight: 900;
	color: var(--dark);
	transition: all 0.5s ease;
}

.beha:hover {
	text-decoration: none;
	color: #1B64F6;
}

/* Before Footer */
.beforefooter {
	padding: 15vh 10vw 15vh 2vw;
}

@media(max-width: 1024px) {
	nav.navbar {
		/* visibility: hidden; */
	}

	.about-padding{
		padding: 10vh 8vw;
	}

	.strip3 {
		padding: 12vh 12vw;
	}

	.strip4 {
		padding: 0vh 12vw 0 12vw;
	}

	.beforefooter {
		padding: 0vh 0vw 10vh 0 !important;
	}

	.headsup {
		/* top:50%;
		transform: translateY(-40%); */
		font-size: 13vw;
	}

	.strip1 {
		height: 100vh;
	}
}

.strip4 {
	max-width: 100vw;
	overflow: hidden;
}

.gallery-filter {
	margin: 20px;
}

.gallery-filter li {
	/* width: 100px; */
	padding: 0 5px;
}

.gallery-filter li a {
	transition: all 0.5s ease;
	text-align: center;
}

.gallery-filter li a:hover,
.gallery .nav .btn:active {
	color: var(--dark);
}

/* .gallery .gallery-item{
	padding: 5px;
	transition: all 5s ease;
	overflow: hidden!important;
} */
.gallery .gallery-item.hide {
	display: none;
}

.gallery-item {
	overflow: hidden;
}

.gallery-item .item-overlay {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	height: 100%;
	width: 100%;
	opacity: 0;
	transition: all 0.2s ease;
	/* background-color: #181818; */
	background-image: url(/kps-master/assets/noise.png);
	background-clip: content-box;
	/* padding: 5px; */
}

.gallery-item:hover .item-overlay {
	opacity: 0.8;
}

.gallery-item:hover .galleryimage {
	-webkit-filter: blur(12px);
	/* Chrome, Safari, Opera */
	filter: blur(12px) grayscale(100%) brightness(0.2);
	transform: scale(1.08);
}

.item-overlay .caption {
	color: var(--light);
	font-size: 2rem;
	font-family: 'Montserrat', sans-serif;
	font-weight: 900;
	line-height: 2rem;
	position: absolute;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	text-align: center;
}

.subcaption {
	font-family: 'Open Sans', sans-serif;
	color: var(--accent);
	font-size: 1rem !important;
}



@media(max-width: 768px) {

	

}

@media(max-width: 600px) {
	.homebannerimage {
		height: 100%;
		top: 10%;
		right: -46%;
	}

	body{
		font-size: 1rem;
	}

	h1{
		font-size: 4rem;
	}
	
	h2{
		font-size: 2.5rem;
	}
	
	h3{
		font-size: 1.5rem;
	}

	.padding-left{
		padding: 0;
		padding-bottom: 10vh;
	}

	.strip1 {
		padding: 0px 0px 0px 40px;
		margin: 0;
	}

	.headsup {
		top: 45%;
	}

	hr.new2 {
		width: 50vw;
	}

	#banner-lottie-1 {
		width: 100%;
		top: 65% !important;
	}
	
	#banner-lottie-2 {
		width: 130%;
		top: 50% !important;
		left: -16% !important;
	}

	.btn-outline-light{
		font-size: 1rem;
	}

	.active{
		font-size: 1rem;
	}

	/* Pulling the banner animation a bit up on mobile view. */
	.strip1 .vertical-center{
		top: 47%;
	}

	/* Increasing Banner text size */
	.strip1 h2{
		font-size: 3rem;
	}

	/* Reducing size of the about video container */
	.banner-image-container{
		height: 60vh;
	}

	/* Reducing the font size of captions for gallery */
	.item-overlay .caption{
		font-size: 1rem;
		line-height: 1.5rem;
	}
}

